--- a/.hgignore
+++ b/.hgignore
@@ -22,6 +22,7 @@ Jennisys/Jennisys/examples/bak
 Chalice/project/boot
 Chalice/project/target
 Chalice/target
+Chalice/bin
 Chalice/scripts/create_release/release
 BCT/InternalBCT.sln
 *.pyc
@@ -29,3 +30,4 @@ BCT/InternalBCT.sln
 *.exe.mdb
 *.pidb
 *.userprefs
+Binaries/Dafny.suo
