Boogie: improved parser makefile

--- a/Source/Core/Makefile
+++ b/Source/Core/Makefile
@@ -10,10 +10,11 @@ FRAME_DIR = ..\..\..\boogiepartners\CocoR\Modified
 # "all" depends on 2 files, really (Parser.cs and Scanner.cs), but they
 # are both generated in one go and I don't know a better way to tell
 # nmake that.  --KRML
-all: Parser.ssc 
+all: Parser.cs
 
-Parser.ssc: $(FRAME_DIR)\Scanner.frame $(FRAME_DIR)\Parser.frame BoogiePL.atg
+Parser.cs: $(FRAME_DIR)\Scanner.frame $(FRAME_DIR)\Parser.frame BoogiePL.atg
 	$(COCO) BoogiePL.atg -namespace Microsoft.Boogie -frames $(FRAME_DIR)
 
 clean:
-	rm -f Scanner.cs Parser.cs
+	if exist Scanner.cs del Scanner.cs
+	if exist Parser.cs del Parser.cs
