--- a/Source/Doomed/Doomed.csproj
+++ b/Source/Doomed/Doomed.csproj
@@ -34,7 +34,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>InterimKey.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\InterimKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -51,7 +51,6 @@
     <Compile Include="DoomedStrategy.cs" />
     <Compile Include="DoomErrorHandler.cs" />
     <Compile Include="HasseDiagram.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VCDoomed.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -89,7 +88,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="InterimKey.snk" />
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
