--- a/Source/Core/Core.csproj
+++ b/Source/Core/Core.csproj
@@ -157,8 +157,10 @@
     <Compile Include="Duplicator.cs" />
     <Compile Include="Inline.cs" />
     <Compile Include="LambdaHelper.cs" />
+    <Compile Include="LinearSets.cs" />
     <Compile Include="LoopUnroll.cs" />
     <Compile Include="OOLongUtil.cs" />
+    <Compile Include="OwickiGries.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="PureCollections.cs" />
     <Compile Include="ResolutionContext.cs" />
