Improvements to Staged Houdini

--- a/Source/Core/Core.csproj
+++ b/Source/Core/Core.csproj
@@ -152,6 +152,7 @@
     <Compile Include="AbsyQuant.cs" />
     <Compile Include="AbsyType.cs" />
     <Compile Include="BitvectorAnalysis.cs" />
+    <Compile Include="InterProceduralReachabilityGraph.cs" />
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="DeadVarElim.cs" />
     <Compile Include="Duplicator.cs" />
