--- a/Source/BoogieDriver/BoogieDriver.csproj
+++ b/Source/BoogieDriver/BoogieDriver.csproj
@@ -210,6 +210,10 @@
     <Compile Include="..\version.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AbsInt\AbsInt.csproj">
+      <Project>{0efa3e43-690b-48dc-a72c-384a3ea7f31f}</Project>
+      <Name>AbsInt</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Basetypes\Basetypes.csproj">
       <Project>{43DFAD18-3E35-4558-9BE2-CAFF6B5BA8A0}</Project>
       <Name>Basetypes</Name>
@@ -222,13 +226,41 @@
       <Project>{B230A69C-C466-4065-B9C1-84D80E76D802}</Project>
       <Name>Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Doomed\Doomed.csproj">
+      <Project>{884386a3-58e9-40bb-a273-b24976775553}</Project>
+      <Name>Doomed</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ExecutionEngine\ExecutionEngine.csproj">
       <Project>{eaa5eb79-d475-4601-a59b-825c191cd25f}</Project>
       <Name>ExecutionEngine</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Graph\Graph.csproj">
+      <Project>{69a2b0b8-bcac-4101-ae7a-556fcc58c06e}</Project>
+      <Name>Graph</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Houdini\Houdini.csproj">
+      <Project>{cf41e903-78eb-43ba-a355-e5feb5ececd4}</Project>
+      <Name>Houdini</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ParserHelper\ParserHelper.csproj">
       <Project>{fcd3ac7f-9dfd-46c8-ab1e-09f0b0f16dc5}</Project>
       <Name>ParserHelper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Predication\Predication.csproj">
+      <Project>{afaa5ce1-c41b-44f0-88f8-fd8a43826d44}</Project>
+      <Name>Predication</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Provers\SMTLib\SMTLib.csproj">
+      <Project>{9b163aa3-36bc-4afb-88ab-79bc9e97e401}</Project>
+      <Name>SMTLib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VCExpr\VCExpr.csproj">
+      <Project>{56ffdbca-7d14-43b8-a6ca-22a20e417ee1}</Project>
+      <Name>VCExpr</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VCGeneration\VCGeneration.csproj">
+      <Project>{e1f10180-c7b9-4147-b51f-fa1b701966dc}</Project>
+      <Name>VCGeneration</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
