--- a/Source/ExecutionEngine/ExecutionEngine.csproj
+++ b/Source/ExecutionEngine/ExecutionEngine.csproj
@@ -14,6 +14,8 @@
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\InterimKey.snk</AssemblyOriginatorKeyFile>
+    <ProductVersion>12.0.0</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,47 +46,47 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AbsInt\AbsInt.csproj">
-      <Project>{0efa3e43-690b-48dc-a72c-384a3ea7f31f}</Project>
+      <Project>{0EFA3E43-690B-48DC-A72C-384A3EA7F31F}</Project>
       <Name>AbsInt</Name>
     </ProjectReference>
     <ProjectReference Include="..\Basetypes\Basetypes.csproj">
-      <Project>{43dfad18-3e35-4558-9be2-caff6b5ba8a0}</Project>
+      <Project>{43DFAD18-3E35-4558-9BE2-CAFF6B5BA8A0}</Project>
       <Name>Basetypes</Name>
     </ProjectReference>
     <ProjectReference Include="..\CodeContractsExtender\CodeContractsExtender.csproj">
-      <Project>{accc0156-0921-43ed-8f67-ad8bdc8cde31}</Project>
+      <Project>{ACCC0156-0921-43ED-8F67-AD8BDC8CDE31}</Project>
       <Name>CodeContractsExtender</Name>
     </ProjectReference>
     <ProjectReference Include="..\Core\Core.csproj">
-      <Project>{b230a69c-c466-4065-b9c1-84d80e76d802}</Project>
+      <Project>{B230A69C-C466-4065-B9C1-84D80E76D802}</Project>
       <Name>Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\Doomed\Doomed.csproj">
-      <Project>{884386a3-58e9-40bb-a273-b24976775553}</Project>
+      <Project>{884386A3-58E9-40BB-A273-B24976775553}</Project>
       <Name>Doomed</Name>
     </ProjectReference>
     <ProjectReference Include="..\Graph\Graph.csproj">
-      <Project>{69a2b0b8-bcac-4101-ae7a-556fcc58c06e}</Project>
+      <Project>{69A2B0B8-BCAC-4101-AE7A-556FCC58C06E}</Project>
       <Name>Graph</Name>
     </ProjectReference>
     <ProjectReference Include="..\Houdini\Houdini.csproj">
-      <Project>{cf41e903-78eb-43ba-a355-e5feb5ececd4}</Project>
+      <Project>{CF41E903-78EB-43BA-A355-E5FEB5ECECD4}</Project>
       <Name>Houdini</Name>
     </ProjectReference>
     <ProjectReference Include="..\Model\Model.csproj">
-      <Project>{acef88d5-dadd-46da-bae1-2144d63f4c83}</Project>
+      <Project>{ACEF88D5-DADD-46DA-BAE1-2144D63F4C83}</Project>
       <Name>Model</Name>
     </ProjectReference>
     <ProjectReference Include="..\ParserHelper\ParserHelper.csproj">
-      <Project>{fcd3ac7f-9dfd-46c8-ab1e-09f0b0f16dc5}</Project>
+      <Project>{FCD3AC7F-9DFD-46C8-AB1E-09F0B0F16DC5}</Project>
       <Name>ParserHelper</Name>
     </ProjectReference>
     <ProjectReference Include="..\Predication\Predication.csproj">
-      <Project>{afaa5ce1-c41b-44f0-88f8-fd8a43826d44}</Project>
+      <Project>{AFAA5CE1-C41B-44F0-88F8-FD8A43826D44}</Project>
       <Name>Predication</Name>
     </ProjectReference>
     <ProjectReference Include="..\VCGeneration\VCGeneration.csproj">
-      <Project>{e1f10180-c7b9-4147-b51f-fa1b701966dc}</Project>
+      <Project>{E1F10180-C7B9-4147-B51F-FA1B701966DC}</Project>
       <Name>VCGeneration</Name>
     </ProjectReference>
   </ItemGroup>
