--- a/Source/Houdini/Houdini.csproj
+++ b/Source/Houdini/Houdini.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -82,6 +82,7 @@
     <Compile Include="Checker.cs" />
     <Compile Include="CandidateDependenceAnalyser.cs" />
     <Compile Include="Houdini.cs" />
+    <Compile Include="StagedHoudini.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Basetypes\Basetypes.csproj">
