--- a/Source/BVD/BVD.csproj
+++ b/Source/BVD/BVD.csproj
@@ -9,7 +9,6 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Boogie.ModelViewer</RootNamespace>
     <AssemblyName>BVD</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
@@ -26,6 +25,8 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <ProductVersion>12.0.0</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,9 +47,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -67,7 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ModelViewer\ModelViewer.csproj">
-      <Project>{a678c6eb-b329-46a9-bbfc-7585f01acd7c}</Project>
+      <Project>{A678C6EB-B329-46A9-BBFC-7585F01ACD7C}</Project>
       <Name>ModelViewer</Name>
     </ProjectReference>
   </ItemGroup>
