--- a/Source/ExecutionEngine/ExecutionEngine.csproj
+++ b/Source/ExecutionEngine/ExecutionEngine.csproj
@@ -92,6 +92,10 @@
       <Project>{ACCC0156-0921-43ED-8F67-AD8BDC8CDE31}</Project>
       <Name>CodeContractsExtender</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Concurrency\Concurrency.csproj">
+      <Project>{d07b8e38-e172-47f4-ad02-0373014a46d3}</Project>
+      <Name>Concurrency</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Core\Core.csproj">
       <Project>{B230A69C-C466-4065-B9C1-84D80E76D802}</Project>
       <Name>Core</Name>
