--- a/Source/Concurrency/Concurrency.csproj
+++ b/Source/Concurrency/Concurrency.csproj
@@ -52,9 +52,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LinearSets.cs" />
-    <Compile Include="MoverChecking.cs" />
+    <Compile Include="MoverCheck.cs" />
     <Compile Include="OwickiGries.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RefinementCheck.cs" />
+    <Compile Include="TypeCheck.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
