--- a/Source/Concurrency/Concurrency.csproj
+++ b/Source/Concurrency/Concurrency.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -53,8 +53,8 @@
   <Choose>
     <When Condition="'$(Configuration)' == 'QED'">
       <ItemGroup>
-        <Reference Include="CertifiedMSAutomata">
-          <HintPath>..\..\Binaries\CertifiedMSAutomata.dll</HintPath>
+        <Reference Include="Microsoft.Automata">
+          <HintPath>..\..\Binaries\Microsoft.Automata.dll</HintPath>
         </Reference>
       </ItemGroup>
     </When>
