Pass -useBaseNameForFileName option to Boogie when running tests. This is needed because the expected test output contains just the basename of the .bpl files in error messages but lit passes an absolute path to Boogie so without this option error messages would contain absolute paths which would cause the tests to fail.
Now all the houdini tests pass when driven by lit.

--- a/Test/lit.site.cfg
+++ b/Test/lit.site.cfg
@@ -78,6 +78,9 @@ if os.name == 'posix':
 # Expected output does not contain logo
 boogieExecutable += ' -nologo'
 
+# We do not want absolute or relative paths in error messages, just the basename of the file
+boogieExecutable += ' -useBaseNameForFileName'
+
 # Allow user to provide extra arguments to Boogie
 boogieParams = lit_config.params.get('boogie_params','')
 if len(boogieParams) > 0:
