For lit tests running on Windows pass /W flag to the fc tool so that all whitespace (including mismatching line endings due to DOS vs UNIX) are ignored. This fixes the test1/Arrays.bpl test under Windows. It's quite suprising this issue didn't come up earlier.

--- a/Test/lit.site.cfg
+++ b/Test/lit.site.cfg
@@ -96,7 +96,7 @@ diffExecutable = None
 if os.name == 'posix':
     diffExecutable = 'diff --unified=3'
 elif os.name == 'nt':
-    diffExecutable = 'fc'
+    diffExecutable = 'fc /W'
 else:
     lit_config.fatal('Unsupported platform')
 
