Enabled the inline lit tests. In order to support expansion2.bpl we now require the OutputCheck tool. The lit.site.cfg file has been taught to require that this tool is in the user's PATH before testing starts.

--- a/Test/lit.site.cfg
+++ b/Test/lit.site.cfg
@@ -101,3 +101,10 @@ else:
     lit_config.fatal('Unsupported platform')
 
 config.substitutions.append( ('%diff', diffExecutable ))
+
+# Detect the OutputCheck tool
+outputCheckPath = lit.util.which('OutputCheck')
+if outputCheckPath == None:
+    lit_config.fatal('The OutputCheck tool is not in your PATH. Please install it.')
+
+config.substitutions.append( ('%OutputCheck', outputCheckPath) )
