Made lit tests slightly less fragile under OSX/Linux by passing flags to ignore DOS line endings and whitespace to diff tool.

--- a/Test/lit.site.cfg
+++ b/Test/lit.site.cfg
@@ -107,7 +107,7 @@ if not solverFound:
 # Add diff tool substitution
 diffExecutable = None
 if os.name == 'posix':
-    diffExecutable = 'diff --unified=3'
+    diffExecutable = 'diff --unified=3 --strip-trailing-cr --ignore-all-space'
 elif os.name == 'nt':
     diffExecutable = 'fc /W'
 else:
