Prevent lit tests from running on OSX/Linux if mono is not in the user's PATH

--- a/Test/lit.site.cfg
+++ b/Test/lit.site.cfg
@@ -73,6 +73,8 @@ if not os.path.exists(boogieExecutable):
 
 if os.name == 'posix':
     boogieExecutable = 'mono ' + boogieExecutable
+    if lit.util.which('mono') == None:
+        lit_config.fatal('Cannot find mono. Make sure it is your PATH')
 
 # Expected output does not contain logo
 boogieExecutable += ' -nologo'
