Convert houd12.bpl into a OutputCheck style test and also pass --dump-file-to-check flag to OutputCheck by default to ease debugging

--- a/Test/lit.site.cfg
+++ b/Test/lit.site.cfg
@@ -122,4 +122,4 @@ outputCheckPath = lit.util.which('OutputCheck')
 if outputCheckPath == None:
     lit_config.fatal('The OutputCheck tool is not in your PATH. Please install it.')
 
-config.substitutions.append( ('%OutputCheck', outputCheckPath) )
+config.substitutions.append( ('%OutputCheck', outputCheckPath + ' --dump-file-to-check') )
