Remove solver executable check under windows at the request of Valentin Wüstholz because under Windows Boogie looks in other locations for Z3.

--- a/Test/lit.site.cfg
+++ b/Test/lit.site.cfg
@@ -93,18 +93,22 @@ lit_config.note('Using Boogie: {}\n'.format(boogieExecutable))
 config.substitutions.append( ('%boogie', boogieExecutable) )
 
 # Sanity check: Check solver executable is available
-solvers = ['z3.exe','cvc4.exe']
-solverFound = False
-for solver in solvers:
-    if os.path.exists( os.path.join(binaryDir, solver)):
-        solverFound = True
+# FIXME: Should this check be removed entirely?
+if os.name != 'nt':
+    solvers = ['z3.exe','cvc4.exe']
+    solverFound = False
+    for solver in solvers:
+        if os.path.exists( os.path.join(binaryDir, solver)):
+            solverFound = True
 
-if not solverFound:
-    lit_config.fatal('Could not find solver in "{binaryDir}". Tried looking for {solvers}'.format(
-                       binaryDir=binaryDir,
-                       solvers=solvers
-                       )
-                    )
+    if not solverFound:
+        lit_config.fatal('Could not find solver in "{binaryDir}". Tried looking for {solvers}'.format(
+                           binaryDir=binaryDir,
+                           solvers=solvers
+                           )
+                        )
+else:
+    lit_config.warning('Skipping solver sanity check on Windows')
 
 # Add diff tool substitution
 diffExecutable = None
